[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-creator"
dynamic = ["version"]
description = "Combine audio files into an m4b audiobook with proper indexing"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Paying4464"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Utilities",
]
keywords = ["audiobook", "m4b", "audio", "conversion", "ffmpeg", "bookplayer"]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/Paying4464/audiobook-creator"
Repository = "https://github.com/Paying4464/audiobook-creator"
Issues = "https://github.com/Paying4464/audiobook-creator/issues"

[project.scripts]
audiobook-creator = "main:main"

[tool.setuptools.dynamic]
version = {attr = "main.__version__"}